# WrinkleFree-Monorepo

./: .coverage  .gitignore  .gitmodules  .skyignore  .sync.conf.example  CHANGELOG.md  CLAUDE.md  README.md  SYNC_SETUP.md  notebook.md  package-lock.json  package.json  pyproject.toml  runpod_influence_test.sh  smoke_test_dlm_bitnet.yaml  smoke_test_dlm_bitnet_2gpu.yaml  smoke_test_qwen3_4b.yaml  sync.sh  train_qwen3_4b_8xh100.yaml
.claude/agents/: bitnet-systems-dev.md  gpu-sync-guardian.md  sky-deployer.md
credentials/: gcp-service-account.example.json
docs/: architecture.md  dependencies.md  development.md  quick-start.md  tensor-parallelism.md
docs/ai-code/: CHANGELOG.md  reference.md
docs/experiments/: README.md  ablation_influence_reweighting_2025-12-26.md  coverage-baseline.md
docs/guides/: cloud-deployment.md  inference-getting-started.md  training-getting-started.md
docs/research/: 2025-12-19-training-improvements.html  2025-12-19-training-improvements.md  2025-12-29-training-stability.md  cloud-providers-2025.md  multi-domain-variance.md  notebook.md  skypilot-setup.md
docs/speed-benchmarks/: bottlenecks.md
models/bitnet-2b-step3200/: config.json  special_tokens_map.json
models/bitnet-2b-step3600/: config.json  tokenizer_config.json
models/smollm2-135m-dlm-subln/: config.json
models/smollm2-135m-quantized_quantized/: config.json
runs/Dec30_15-12-26_994c52ea9640/: events.out.tfevents.1767107546.994c52ea9640.2491.0
runs/Dec30_15-43-49_b4383ceb2217/: events.out.tfevents.1767109429.b4383ceb2217.197.0
runs/Dec30_15-53-08_b4383ceb2217/: events.out.tfevents.1767109988.b4383ceb2217.468.0
runs/Dec30_15-56-07_b4383ceb2217/: events.out.tfevents.1767110167.b4383ceb2217.774.0
runs/Dec30_16-00-00_b4383ceb2217/: events.out.tfevents.1767110400.b4383ceb2217.1080.0
runs/Dec30_16-10-16_b4383ceb2217/: events.out.tfevents.1767111016.b4383ceb2217.1601.0
training_logs/warnings/: 2025-12-30_00-36-59_training_failed_e9e9da9b.json  2025-12-30_00-55-56_training_failed_e9e9da9b.json  2025-12-30_01-07-12_training_failed_e9e9da9b.json  2025-12-30_01-18-48_training_failed_e9e9da9b.json  (+2 more)
wandb/: latest-run
(+6 files in other folders)
