[project]
name = "wrinklefree-workspace"
version = "0.1.0"
description = "WrinkleFree monorepo for 1.58-bit quantized LLM research"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "smoke: Quick smoke tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "gpu: GPU-required tests",
]
